mediacentral/newsroom-management/data-receiver/versions/2026.4/readme.md
---
product: mediacentral-newsroom-management-data-receiver
product-area: newsroom-management
version: "2026.4"
release-date: 01/04/2026
doc-type: readme
source: pdf
confidentiality: public
date-added: 08/06/2026
status: current
---

Avid MediaCentral | Data Receiver Version 2026.4 ReadMe Avid recommends that you read all of the information in this ReadMe thoroughly before installing or using the software described in this document.
> **Note:** The content herein applies to the aforementioned version, and contains the latest information that
might not have been available when product guides were published. However, for previous versions, users should reference older ReadMe documentation for additional information related to those earlier releases.
See the following Avid Knowledge Base link for the most up-to-date Avid MediaCentral Newsroom Management documentation (all releases):
https://kb.avid.com/articles/en_US/user_guide/MediaCentral-Newsroom-Management Revision History Date Revised Changes Made May 2026 Initial publication Security Guidelines Security Guidelines Avid allows you to install an endpoint detection and response solution on your Newsroom Management system. This applies to both single-server and cluster environments. While Avid does not support any specific solution, you can find general guidelines and information related to CrowdStrike Falcon on the following Avid Knowledge Base page: https://kb.avid.com/articles/en_US/troubleshooting/en239659 Compatibility Notes and Issues This section contains compatibility information. Specific versions are mentioned when pertinent.
> **Note:** For information about compatibility of earlier versions of Data Receiver, please see this section in
ReadMe files for those earlier releases.
Qualified Servers and Operating Systems Avid performs extensive testing on specific hardware and/or software to verify full compatibility with Data Receiver. Those that pass these tests are considered qualified by Avid.
Microsoft Windows Data Receiver Server is supported for use on Windows Server 2025 (or Windows Server 2022) with ASP.NET Core Runtime 8.0.21 and .NET Runtime 8.0.21 or later 8.0 versions.
Data Receiver Administrator Application is additionally supported for Windows 11.
This version of Data Receiver is not supported on any other Windows operating system.
Newsroom Management Data Receiver is qualified and supported for use with Newsroom Management 2024.10 and later. It is backward compatible to previous versions of the newsroom system software.
Install and Upgrade Notes and Issues This section contains information related to installing and/or upgrading Data Receiver, and its two components: the Data Receiver Server and the Data Receiver Administrator Application.
Upgrading from Older Versions The server installer will check for older versions of Data Receiver and would not proceed with installation unless the older version is uninstalled. User should uninstall the older version through Control Panel > Programs > Programs and Features.
Prerequisites for Installation This version has dependencies on Microsoft Visual C++ redistributable which is installed with the setup (also available at this link https://aka.ms/vs/17/release/vc_redist.x64.exe ) and .NET 8.0 which could be downloaded with this link ( https://dotnet.microsoft.com/en-us/download/dotnet/thank-you/sdk- 8.0.306-windows-x64-installer).
Installing the Server Service The Server Service Installer is available under the folder DataReceiver\Server in the MediaCentral | Newsroom Management release ISO – run the setup to install the Server Service.
Install and Upgrade Notes and Issues Installing the Administrator Application The Administrator Application Installer is available under the folder DataReceiver\Administrator in the MediaCentral | Newsroom Management release ISO – run the setup to install the Administration Application.
This version of Administrator Application can be deployed on machines separately from the Data Receiver Server to enable user to monitor and maintain wires services on the Data Receiver Server.
User account for login When you launch the Administrator Application, you will be prompted to logon, the default user is “user” and password is “pass”. It is stored in the file appsettings.json under the folder at:
C:\Program Files\Avid\Data Receiver Server
> **Note:** Avid strongly recommends that users at least change the password.
Additional users could be added to the file, password hash is generated by using the utility CreatePassword in the same folder. Below is an example of the appsettings.json with another user “inews” added.
The Data Receiver server will need to be restarted to accept changes to the JSON file.
Remote client To enable the Administrator Application to run remotely, certificates needed to be installed and firewall settings needed to be changed as outlined below. Refer to the Data Receiver Installation and Administration Guide for more detailed instructions.
Installing certificates To setup the default certificate that was delivered with the installation, perform the following steps:
> **Note:** Avid strongly recommends that certificates provided by your organization are used on the server
instead.
1. Copy the certificate file (dr_pub.cer) from the folder: C:\Program Files\Avid\Data
Receiver Server located on the Data Receiver Server to the client machine.
Then, start to install the certificate by double-click on it which then will start the Certificate Import Wizard.
New Features in 2026.4
2. On the welcome page, select Store Location “Local Machine” (requires Administrator privileges) and
press Next.
3. On the Certificate Store Page, select “Place all Certificates in the following store” and press the
Browse button.
4. In the Select Certificate Store dialog, select "Trusted Root Certification Authorities” and press OK.
5. On the Certificate Store Page press OK.
6. On the Completing page press Finish.
Firewall setup to enable remote Administrator Application access To allow remote connection of the Administrator Application, the port 7145 must be open on the Server to accept connection request.
To open the port:
1. Click Control Panel > System and Security > Windows Defender Firewall.
2. Create a new rule to allow request on port 7145 with the following steps:
a. Select Advanced settings on the left panel.
b. Select Inbound Rules on the left panel and New Rule on the right panel to create a new rule.
This will open the New Inbound Rule Wizard.
c. On the Rule Type page, select Port.
d. On the Protocols and Ports page, select Specific Local Port and enter the number 7145; then, click Next.
e. On the Action page, select the Allow the Connection option; then, click Next.
f. On the Profile page, specify the Profiles for which this rule applies. Usually Domain & Private would be sufficient, and then click Next.
On the Name page, give this rule a name (such as Data Receiver Administrator connection) and a description, and then click Finish.
Now the port is open for communication.
New Features in 2026.4 release1 This topic provides an overview of the major new features in this of Data Receiver.
Security Feature Description Handling RSS Updates This version of Data Receiver now tracks the publishing dates in addition to UIDs.
RSS Items for the same UID will be treated as new, if there is a new publishing date. Updated RSS items can now be ingested as new stories into Newsroom Management.
1 For information on new features implemented in releases prior to this release, please see the Guides and ReadMe documentation for those earlier versions.
Fixed in Version 2026.4 The following issues have been resolved in MediaCentral | Data Receiver v2026.4.
Fixed in Version 2026.4 Bug Number: IN-180960. The Data Receiver installer now checks the minimum Microsoft DOT.NET version instead of a specific one.
Bug Number: IN- 180974. Importing an existing SFC did not properly convert the FindReverse function. The function is now moving current index to the right position.
Bug Number: IN-180988. Previously, when a connection was rejected due to load balancing, Data Receiver wire service would log the failed connection with a corrupted server name.
Bug Number: IN- 181000. In previous versions, Data Receiver did not evaluate the pubDate of RSS feed items to detect updates.
Technical Support Information Technical Support Information Most products feature a number of coverage options. Avid Assurance service offerings are designed to facilitate your use of Avid solutions. Service options include extended telephone coverage, automatic software maintenance, extended hardware warranty, and preferred pricing on replacement parts.
Offerings and options may vary by product and are not available for all products.
For more information regarding Avid service offerings, visit www.avid.com/support or call Avid Sales at 800-949-AVID (800-949-2843).
Program availability and details might vary depending on geographic location and are subject to change without notice. Contact your local Avid office or your local Avid Reseller for complete program information and pricing. However, if you need help locating an Avid office or Avid Reseller near you, please visit www.avid.com or call in North America 800-949-AVID (800-949-2843). International users call 978-275- 2480.
Accessing Online Support Avid Online Support is available 24 hours per day, 7 days per week. Search the Knowledge Base to find answers, to view error messages, to access troubleshooting tips, to download updates, and to read/join online message-board discussions.
To access Avid Online Support:
- Go to www.support.avid.com.
> **Note:** Supplemental documentation for this release, if available, is provided on the Knowledge Base. For
the latest up-to-date information, browse the Knowledge Base at Avid Online Support.
Technical Support Information